# leptos-fluent

./: .editorconfig  .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint-cli2.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  PACKAGIST_README_RENDERING.md  README.md  README.tpl  SECURITY.md  advanced-usage.html  basic-usage.html  checking-translations.html  faqs.html  index.html  install.html  intro.html  languages.html  leptos_fluent.html  lychee.toml  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  strategies.html  toc.html  toc.js
book/: book.toml
end2end/: .pre-commit-config.yaml  Cargo.toml  TODO.md  run.sh
end2end/accept-language-header/: Cargo.toml  webdriver.json
end2end/accept-language-header/tests/: initial_language_from_accept_language_header.rs
end2end/initial-language-from-navigator/: Cargo.toml  webdriver.json
end2end/initial-language-from-navigator/tests/: initial_language_from_accept_language_header.rs  initial_language_from_navigator.rs
end2end/set-language-from-navigator/: Cargo.toml  webdriver.json
end2end/set-language-from-navigator/tests/: set_language_from_navigator.rs
end2end/set-language-to-cookie/: Cargo.toml
end2end/set-language-to-cookie/tests/: set_language_to_cookie.rs
end2end/set-language-to-localstorage/: Cargo.toml
end2end/set-language-to-localstorage/tests/: set_language_to_localstorage.rs
end2end/tests/: TODO.md  context_outside_reactive_ownership_tree.rs  cookie.rs  cookie_attrs.rs  cookie_to_localstorage.rs  csr_complete.rs  csr_minimal.rs  initial_language_from_localstorage.rs  localstorage.rs  localstorage_key.rs  localstorage_to_cookie.rs  url_param.rs  url_param_to_cookie.rs  url_param_to_localstorage.rs
end2end/tests-helpers/: Cargo.toml
end2end/tests-helpers/src/: lib.rs
examples/csr-complete/: Cargo.toml  README.md
examples/csr-complete/locales/: languages.json
examples/csr-complete/locales/en/: main.ftl
examples/csr-complete/locales/es/: main.ftl
examples/csr-complete/src/: lib.rs  main.rs
examples/csr-minimal/: Cargo.toml
examples/csr-minimal/locales/en/: main.ftl
examples/csr-minimal/locales/es/: main.ftl
examples/csr-minimal/src/: lib.rs  main.rs
examples/minimal/: Cargo.toml  README.md  index.html
examples/minimal/locales/en/: main.ftl
examples/minimal/locales/es/: main.ftl
examples/minimal/src/: lib.rs  main.rs
examples/ssr-hydrate-actix/: Cargo.toml  README.md
examples/ssr-hydrate-actix/locales/en/: 404.ftl  main.ftl
examples/ssr-hydrate-actix/locales/es/: 404.ftl  main.ftl
examples/ssr-hydrate-actix/src/: app.rs  lib.rs  main.rs
examples/ssr-hydrate-axum/: Cargo.toml  README.md
examples/ssr-hydrate-axum/locales/: languages.yaml
examples/ssr-hydrate-axum/locales/en/: main.ftl
examples/ssr-hydrate-axum/locales/es/: main.ftl
examples/ssr-hydrate-axum/src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
examples/system-gtk/: Cargo.toml  README.md  build.rs
examples/system-gtk/locales/en/: main.ftl
examples/system-gtk/locales/es/: main.ftl
examples/system-gtk/src/: main.rs
leptos-fluent/: Cargo.toml  README.md
leptos-fluent-macros/: Cargo.toml  README.md  README.tpl
leptos-fluent-macros/src/: cookie.rs  exprpath.rs  files_tracker.rs  fluent_entries.rs  fluent_resources.rs  languages.rs  lib.rs  loader.rs  tr_macros.rs  translations_checker.rs  translations_filler.rs
leptos-fluent-macros/src/translations_checker/: fluent_entries.rs  mod.rs  tr_macros.rs
leptos-fluent-macros/src/translations_filler/: mod.rs
leptos-fluent/src/: cookie.rs  data_file.rs  http_header.rs  lib.rs  local_storage.rs  localstorage.rs  session_storage.rs  sessionstorage.rs  url.rs
leptos-fluent/src/gui/: editor.css  editor.rs  mod.css  mod.rs  projects.css  projects.rs
tests/: Cargo.toml
tests/end2end/: Cargo.toml  TODO.md  run.sh
tests/end2end/csr/: Cargo.toml
tests/end2end/csr/helpers/: Cargo.toml
tests/end2end/csr/initial-language-from-navigator/: Cargo.toml
tests/end2end/csr/set-language-to-cookie/: Cargo.toml
tests/end2end/csr/set-language-to-local-storage/: Cargo.toml  webdriver.json
tests/end2end/csr/set-language-to-session-storage/: Cargo.toml
tests/end2end/csr/tests/: cookie.rs  cookie_to_local_storage.rs  csr_complete.rs  csr_minimal.rs  local_storage.rs  local_storage_to_cookie.rs  local_storage_to_session_storage.rs  session_storage.rs  session_storage_to_cookie.rs  session_storage_to_local_storage.rs  url_param.rs  url_param_to_cookie.rs  url_param_to_local_storage.rs
tests/end2end/helpers/: Cargo.toml
tests/end2end/helpers/src/: lib.rs
tests/end2end/initial-language-from-navigator/: Cargo.toml
tests/end2end/initial-language-from-navigator/tests/: initial_language_from_navigator.rs
tests/end2end/set-language-to-cookie/: Cargo.toml
tests/end2end/set-language-to-cookie/tests/: set_language_to_cookie.rs
tests/end2end/set-language-to-local-storage/: Cargo.toml
tests/end2end/set-language-to-local-storage/tests/: set_language_to_localstorage.rs
tests/end2end/set-language-to-localstorage/: Cargo.toml
tests/end2end/set-language-to-localstorage/tests/: set_language_to_localstorage.rs
tests/end2end/set-language-to-session-storage/: Cargo.toml
tests/end2end/set-language-to-sessionstorage/: Cargo.toml
tests/end2end/ssr/: Cargo.toml  build.rs
tests/end2end/ssr/helpers/: Cargo.toml
tests/end2end/tests/: context_outside_reactive_ownership_tree.rs  cookie.rs  cookie_to_local_storage.rs  cookie_to_localstorage.rs  csr_complete.rs  csr_minimal.rs  local_storage.rs  local_storage_to_cookie.rs  local_storage_to_session_storage.rs  localstorage.rs  localstorage_to_cookie.rs  localstorage_to_sessionstorage.rs  session_storage.rs  session_storage_to_cookie.rs  session_storage_to_local_storage.rs  sessionstorage.rs  sessionstorage_to_cookie.rs  sessionstorage_to_localstorage.rs  url_param.rs  url_param_to_cookie.rs  url_param_to_local_storage.rs  url_param_to_localstorage.rs
tests/src/: book.rs  leptos_fluent.rs  lib.rs  web.rs
(+304 files in other folders)
