[workspace]
members = [
  "leptos-fluent",
  "leptos-fluent-macros",
  "examples/csr-complete",
  "examples/csr-minimal",
  "examples/ssr-hydrate-actix",
  "examples/ssr-hydrate-axum",
  "end2end",
  "end2end/tests-helpers",
  "end2end/accept-language-header",
]
resolver = "2"

[workspace.package]
edition = "2021"
documentation = "https://docs.rs/leptos-fluent"
repository = "https://github.com/mondeja/leptos-fluent"
homepage = "https://mondeja.github.io/leptos-fluent"
keywords = ["leptos", "fluent", "i18n", "localization", "wasm"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
