[workspace]
members = [
  "leptos-fluent",
  "leptos-fluent-macros",
  "examples/csr-complete",
  "examples/csr-minimal",
  "examples/ssr-hydrate-actix",
  "examples/ssr-hydrate-axum",
  "tests",
  "tests/end2end",
  "tests/end2end/helpers",
  "tests/end2end/initial-language-from-navigator",
  "tests/end2end/set-language-to-cookie",
  "tests/end2end/set-language-to-localstorage",
  "tests/end2end/set-language-to-sessionstorage",
]
resolver = "2"

[workspace.package]
edition = "2021"
documentation = "https://docs.rs/leptos-fluent"
repository = "https://github.com/mondeja/leptos-fluent"
homepage = "https://mondeja.github.io/leptos-fluent"
keywords = ["leptos", "fluent", "i18n", "localization", "wasm"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
leptos-fluent = { path = "./leptos-fluent" }
end2end-helpers = { path = "./tests/end2end/helpers" }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
gloo-utils = { version = "0.2", default-features = false }
