[package]
name = "leptos-fluent-macros"
description = "Macros for leptos-fluent"
edition.workspace = true
version = "0.0.33"
license = "MIT"
documentation.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["visit", "full"] }
walkdir = ">=2"
globwalk = "0.9"
fluent-templates.workspace = true
fluent-syntax = "0.11"
pathdiff = "0.2"
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
json5 = { version = "0.4", optional = true }

[features]
hydrate = []
ssr = []
actix = []
axum = []
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
json5 = ["dep:json5"]

[package.metadata.cargo-all-features]
skip_feature_sets = [
  ["csr", "ssr"],
  ["csr", "hydrate"],
  ["ssr", "hydrate"],
  ["actix", "axum"],
  ["actix", "csr"],
  ["actix", "hydrate"],
  ["axum", "csr"],
  ["axum", "hydrate"]
]
always_include_features = ["json"]
denylist = ["yaml", "json5"]
