[package]
name = "leptos-fluent-macros"
description = "Macros for leptos-fluent"
edition.workspace = true
version = "0.1.11"
license = "MIT"
documentation.workspace = true
repository.workspace = true
readme = "README.md"
homepage.workspace = true
keywords.workspace = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["visit", "full"] }
walkdir = ">=2"
globwalk = "0.9"
fluent-templates.workspace = true
fluent-syntax = "0.11"
pathdiff = "0.2"
cfg-expr = ">=0.10"
current_platform = ">=0.2"
serde = { version = "1", default-features = false, features = [
  "derive"
], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
json5 = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
trybuild = "1"
leptos = "0.6"
leptos-fluent = { path = "../leptos-fluent" }

[features]
nightly = ["proc-macro2/span-locations"]
system = []
tracing = ["dep:tracing"]
hydrate = []
ssr = []
actix = []
axum = []
json = ["dep:serde", "dep:serde_json"]
yaml = ["dep:serde", "dep:serde_yaml"]
json5 = ["dep:serde", "dep:json5"]

[package.metadata.cargo-all-features]
skip_feature_sets = [
  ["csr", "ssr"],
  ["csr", "hydrate"],
  ["ssr", "hydrate"],
  ["actix", "axum"],
  ["actix", "csr"],
  ["actix", "hydrate"],
  ["axum", "csr"],
  ["axum", "hydrate"],
  ["ssr"],
]
always_include_features = ["json"]
denylist = ["yaml", "json5", "nightly", "tracing"]
