[package]
name = "leptos-fluent-macros"
description = "Macros for leptos-fluent"
edition.workspace = true
version = "0.2.17"
rust-version = "1.79.0"
license = "MIT"
documentation.workspace = true
repository.workspace = true
readme = "README.md"
homepage.workspace = true
keywords = ["leptos-fluent", "i18n", "localization", "wasm"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["visit", "full"] }
walkdir = ">=2"
globwalk = "0.9"
fluent-templates = { version = ">=0.13.1", default-features = false, features = [
  "macros",
  "walkdir",
] }
fluent-syntax = ">=0.12"
fluent-bundle = ">=0.16"
pathdiff = "0.2"
# TODO: using the same version for cfg-expr of system-deps until a new system-deps is released
# The problem related with trybuild locking https://github.com/dtolnay/trybuild/issues/261
cfg-expr = ">=0.10,<0.16"
current_platform = ">=0.2"
serde = { version = "1", default-features = false, features = [
  "derive",
], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
json5 = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
proc-macro-warning = "1"

[dev-dependencies]
trybuild = "1"
leptos = "0.8"
leptos-fluent.workspace = true

[features]
nightly = ["proc-macro2/span-locations"]
system = []
tracing = ["dep:tracing"]
hydrate = []
ssr = []
actix = []
axum = []
json = ["dep:serde", "dep:serde_json"]
yaml = ["dep:serde", "dep:serde_yaml"]
json5 = ["dep:serde", "dep:json5"]
debug = []
disable-unicode-isolating-marks = []

[package.metadata.cargo-all-features]
skip_feature_sets = [
  ["csr", "ssr"],
  ["csr", "hydrate"],
  ["ssr", "hydrate"],
  ["actix", "axum"],
  ["actix", "csr"],
  ["actix", "hydrate"],
  ["axum", "csr"],
  ["axum", "hydrate"],
  ["ssr"],
]
always_include_features = ["json"]
denylist = ["yaml", "json5", "nightly", "tracing"]
