[package]
name = "leptos-fluent"
description = "Fluent framework for internationalization of Leptos applications"
edition.workspace = true
version = "0.1.8"
license = "MIT"
documentation.workspace = true
repository.workspace = true
readme = "README.md"
homepage.workspace = true
keywords.workspace = true

[dependencies]
leptos-fluent-macros = { path = "../leptos-fluent-macros" }
fluent-templates.workspace = true
leptos = ">=0.6"
leptos_meta = { version = ">=0.6", optional = true }
leptos_actix = { version = "0.6", optional = true }
leptos_axum = { version = "0.6", optional = true }
web-sys = { version = ">=0.1", features = [
  "HtmlDocument",
  "Navigator",
  "Location",
  "Storage",
  "UrlSearchParams",
] }
current_locale = { version = "0.1", optional = true }
directories = { version = "5", optional = true }
tracing = { version = "0.1", optional = true }
actix-web = { version = ">=3", optional = true }
axum = { version = ">=0.3", optional = true }
serde = { version = "1", default-features = false, features = [
  "derive"
], optional = true }
pathdiff = { version = "0.2", optional = true }

[features]
default = ["json"]
system = [
  "dep:current_locale",
  "dep:directories",
  "leptos-fluent-macros/system",
]
nightly = ["leptos-fluent-macros/nightly"]
gui = ["dep:leptos_meta", "dep:serde", "dep:pathdiff", "leptos-fluent-macros/gui"]
tracing = ["dep:tracing", "leptos-fluent-macros/tracing"]
hydrate = ["leptos-fluent-macros/hydrate"]
ssr = ["dep:leptos_meta", "leptos-fluent-macros/ssr"]
actix = ["dep:actix-web", "dep:leptos_actix", "leptos-fluent-macros/actix"]
axum = ["dep:axum", "dep:leptos_axum", "leptos-fluent-macros/axum"]
json = ["leptos-fluent-macros/json"]
yaml = ["leptos-fluent-macros/yaml"]
json5 = ["leptos-fluent-macros/json5"]

[package.metadata.cargo-all-features]
skip_feature_sets = [
  ["csr", "ssr"],
  ["csr", "hydrate"],
  ["ssr", "hydrate"],
  ["actix", "axum"],
  ["actix", "csr"],
  ["actix", "hydrate"],
  ["axum", "csr"],
  ["axum", "hydrate"],
  ["ssr"],
]
always_include_features = ["json"]
denylist = ["yaml", "json5", "nightly", "tracing", "gui"]
