[package]
name = "leptos-fluent"
description = "Fluent framework for internationalization of Leptos applications"
edition.workspace = true
version = "0.2.18"
rust-version = "1.80.1"
license = "MIT"
documentation.workspace = true
repository.workspace = true
readme = "README.md"
homepage.workspace = true
keywords.workspace = true

[dependencies]
leptos-fluent-macros = { path = "../leptos-fluent-macros" }
fluent-templates = { version = ">=0.13.1", default-features = false, features = [
  "macros",
  "walkdir",
] }
fluent-bundle = ">=0.16"
leptos = ">=0.7,<0.9"
leptos_meta = ">=0.7,<0.9"
web-sys = { version = ">=0.1", features = [
  "HtmlDocument",
  "Navigator",
  "Location",
  "Storage",
  "UrlSearchParams",
] }
wasm-bindgen = "0.2"
current_locale = { version = "0.1", optional = true }
directories = { version = "5", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = []
system = [
  "dep:current_locale",
  "dep:directories",
  "leptos-fluent-macros/system",
]
nightly = ["leptos-fluent-macros/nightly"]
tracing = ["leptos-fluent-macros/tracing", "dep:tracing"]
hydrate = ["leptos-fluent-macros/hydrate"]
ssr = ["leptos-fluent-macros/ssr"]
actix = ["leptos-fluent-macros/actix"]
axum = ["leptos-fluent-macros/axum"]
json = ["leptos-fluent-macros/json"]
yaml = ["leptos-fluent-macros/yaml"]
json5 = ["leptos-fluent-macros/json5"]
debug = ["leptos-fluent-macros/debug"]
disable-unicode-isolating-marks = [
  "leptos-fluent-macros/disable-unicode-isolating-marks",
]

[package.metadata.cargo-all-features]
skip_feature_sets = [
  ["csr", "ssr"],
  ["csr", "hydrate"],
  ["ssr", "hydrate"],
  ["actix", "axum"],
  ["actix", "csr"],
  ["actix", "hydrate"],
  ["axum", "csr"],
  ["axum", "hydrate"],
  ["ssr"],
]
always_include_features = ["json"]
denylist = ["yaml", "json5", "nightly", "tracing"]
