[package]
name = "leptos-fluent-tests"
description = "Integration tests for leptos-fluent"
edition.workspace = true
version = "0.1.0"
license = "MIT"
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
toml = "0.8"
walkdir = ">=2"
