[package]
name = "leptos-fluent-end2end-set-language-to-cookie-tests"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
tests-helpers = { path = "../tests-helpers" }
leptos-fluent = { path = "../../leptos-fluent" }
fluent-templates = { version = "0.13", default-features = false, features = [
  "macros",
  "walkdir",
] }
leptos-fluent-csr-minimal-example = { path = "../../examples/csr-minimal" }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
leptos = "0.7"

[package.metadata.cargo-machete]
ignored = ["fluent-templates", "wasm-bindgen"]
