[package]
name = "leptos-fluent-csr-complete-example"
edition = "2021"
version = "0.1.0"
publish = false

[lib]
name = "leptos_fluent_csr_complete_example"
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos-fluent = { path = "../../leptos-fluent" }
fluent-templates = "0.9"
console_error_panic_hook = "0"
web-sys = "0"

[[bin]]
name = "main"
path = "src/main.rs"
doc = false
