[package]
name = "leptos-fluent-csr-minimal-example"
edition = "2021"
version = "0.1.0"

[lib]
name = "leptos_fluent_csr_minimal_example"
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.6.12", features = ["csr"] }
leptos-fluent = { path = "../../leptos-fluent", default-features = false }
fluent-templates = "0.9"
console_error_panic_hook = "0.1"

[[bin]]
name = "main"
path = "src/main.rs"
doc = false
