[package]
name = "leptos-fluent-minimal-example"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = {version = "0.6.5", features = ["csr"]}
leptos-fluent = { path = "../../leptos-fluent" }
unic-langid = "0"
log = "0"
console_error_panic_hook = "0"
console_log = "1"
fluent-templates = "0"
