[package]
name = "leptos-fluent-ssr-hydrate-actix-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true }
console_error_panic_hook = "0.1"
leptos = "0.7.0-gamma2"
leptos_meta = "0.7.0-gamma2"
leptos_actix = { version = "0.7.0-gamma2", optional = true }
leptos_router = "0.7.0-gamma2"
leptos-fluent = { path = "../../leptos-fluent" }
fluent-templates = { version = "0.11", default-features = false, features = [
  "macros",
  "walkdir"
] }
wasm-bindgen = "=0.2.93"

[features]
hydrate = [
  "leptos/hydrate",
  "leptos-fluent/hydrate",
]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-fluent/ssr",
  "leptos-fluent/actix"
]

[package.metadata.leptos]
# Additional files the application could depends on.
# A change to any file in those directories will trigger a rebuild.
watch-additional-files = ["examples/ssr-hydrate-actix/locales"]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "ssr-actix"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site-actix"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]
# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]
# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

[package.metadata.cargo-all-features]
skip_feature_sets = [[], ["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
