[package]
name = "leptos-fluent-gtk-example"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.12", features = ["csr"] }
gtk = { version = "0.8.2", package = "gtk4" }
leptos-fluent = { path = "../../leptos-fluent", default-features = false, features = [
  "system", "tracing"
] }
fluent-templates = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
