[package]
name = "leptos-fluent-gtk-example"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
gtk = { version = "0.9", package = "gtk4" }
leptos-fluent = { path = "../../leptos-fluent", default-features = false, features = [
  "system",
  "tracing"
] }
fluent-templates = { version = "0.10", default-features = false, features = [
  "macros",
  "walkdir"
] }
tracing = { version = "0.1", default-features = false }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "ansi",
] }

[build-dependencies]
system-deps = "7"

[package.metadata.system-deps]
gtk4 = "4"
