[package]
name = "leptos-fluent-end2end-tests"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
end2end-helpers.workspace = true
leptos-fluent.workspace = true
fluent-templates = { version = "0.13", default-features = false, features = [
  "macros",
  "walkdir",
] }
leptos-fluent-csr-minimal-example = { path = "../../examples/csr-minimal" }
leptos-fluent-csr-complete-example = { path = "../../examples/csr-complete" }
web-sys = { version = "0.3", features = [
  "Location",
  "Storage",
  "UrlSearchParams",
] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
leptos = "0.8"
leptos_meta = "0.8"

[package.metadata.cargo-machete]
ignored = ["fluent-templates", "leptos_meta"]
