[package]
name = "leptos-fluent-end2end-tests"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
end2end-helpers.workspace = true
leptos-fluent.workspace = true
fluent-templates.workspace = true
leptos-fluent-csr-minimal-example.workspace = true
leptos-fluent-csr-complete-example.workspace = true
web-sys = { version = "0.3", features = [
  "Location",
  "Storage",
  "UrlSearchParams",
] }
wasm-bindgen.workspace = true
wasm-bindgen-test.workspace = true
leptos = "0.8"
gloo-utils.workspace = true
web-sys-ec.workspace = true

[package.metadata.cargo-machete]
ignored = ["fluent-templates"]
