[package]
name = "end2end-helpers"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
leptos = "0.7"
leptos_meta = "0.7"
web-sys = { version = "0.3", features = ["Navigator", "Storage"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[package.metadata.cargo-machete]
ignored = ["leptos_meta"]
