[package]
name = "end2end-helpers"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
leptos = "0.8"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Navigator",
  "Storage"
] }
wasm-bindgen.workspace = true
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils.workspace = true
