[package]
name = "leptos-fluent-end2end-initial-language-from-navigator-tests"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
end2end-helpers.workspace = true
leptos-fluent.workspace = true
fluent-templates = { version = "0.13", default-features = false, features = [
  "macros",
  "walkdir",
] }
leptos-fluent-csr-minimal-example = { path = "../../../examples/csr-minimal" }
wasm-bindgen-test.workspace = true
leptos = "0.8"

[package.metadata.cargo-machete]
ignored = ["fluent-templates", "wasm-bindgen"]
