[package]
name = "leptos-fluent-end2end-set-language-to-sessionstorage-tests"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
end2end-helpers.workspace = true
leptos-fluent.workspace = true
fluent-templates.workspace = true
leptos-fluent-csr-minimal-example.workspace = true
wasm-bindgen-test.workspace = true
leptos = "0.8"

[package.metadata.cargo-machete]
ignored = ["fluent-templates"]
