[package]
name = "leptos-fluent-end2end-csr-initial-language-from-navigator-tests"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
end2end-csr-helpers.workspace = true
leptos-fluent.workspace = true
fluent-templates.workspace = true
leptos-fluent-csr-minimal-example.workspace = true
wasm-bindgen-test.workspace = true
leptos = "0.8"

[package.metadata.cargo-machete]
ignored = ["fluent-templates"]
