[package]
name = "ssr_test_initial_language_from_accept_language_header_actix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.3.1", optional = true }
leptos = { version = "=0.8.2" }
leptos_meta = { version = "=0.8.2" }
leptos_actix = { version = "=0.8.2", optional = true }
leptos_router = { version = "=0.8.2" }
wasm-bindgen = "=0.2.100"
leptos-fluent.workspace = true
app-helpers = { path = "../../app-helpers" }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "leptos-fluent/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-fluent/ssr",
  "leptos-fluent/actix",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "ssr_test_initial_language_from_accept_language_header_actix"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/ssr_test_initial_language_from_accept_language_header_actix"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]
# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false
# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]
# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

[package.metadata.cargo-machete]
ignored = [
  "actix-web",
  "console_error_panic_hook",
  "http",
  "leptos_actix",
  "leptos_meta",
  "leptos_router",
  "wasm-bindgen"
]
